fixed switched max-height for align-self for aside

--- a/styles/_aside.scss
+++ b/styles/_aside.scss
@@ -4,7 +4,7 @@ aside {
   border-radius: 4px;
   display: flex;
   flex-direction: column;
-  // max-height: 139rem;
+  align-self: flex-start;
   flex: 0 1 auto;
 }
 .post-search {
