--- a/styles/style.css
+++ b/styles/style.css
@@ -151,6 +151,7 @@ aside {
   border-radius: 4px;
   display: flex;
   flex-direction: column;
+  align-self: flex-start;
   flex: 0 1 auto;
 }
 
